...

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cancel_black_24dp"
                android:id="@+id/editor_toolbar_cancel"
                android:background="@color/colorPrimary"
                android:tint="@color/mdtp_white"
...
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_save_24dp"
                android:id="@+id/editor_toolbar_save"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="20dp"
...

            <EditText
                android:id="@+id/editor_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect|textMultiLine"
                android:id="@+id/editor_description"
                android:layout_marginTop="10dp"
                android:hint="@string/layout_editor_descriptionhint"
...
                android:text="@string/switchAllDayText"
                android:layout_gravity="center"
                android:id="@+id/sw_allDay" />
            <LinearLayout
                android:orientation="horizontal"
...
                    android:drawableLeft="@drawable/ic_event_date_24dp"
                    android:drawablePadding="20dp"
                    android:id="@+id/editor_btn_pickdate"
                    android:text="@string/defaultDate"
                    android:layout_width="wrap_content"
...

                <Button
                    android:id="@+id/editor_btn_picktime"
                    android:text="@string/defaultTime"
                    android:layout_width="wrap_content"
...
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/layout_enddate"
                android:layout_height="40dp">

...
                    android:drawableLeft="@drawable/ic_event_date_reverse_24dp"
                    android:drawablePadding="20dp"
                    android:id="@+id/editor_btn_pickdate_fin"
                    android:text="@string/defaultDate2"
                    android:layout_width="wrap_content"
...

                <Button
                    android:id="@+id/editor_btn_picktime_fin"
                    android:text="@string/defaultTime"
                    android:layout_width="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_category"
                    android:layout_weight="1.00"
                    android:drawableLeft="?android:attr/actionModePasteDrawable" />
...
                <Button
                    android:drawableLeft="@drawable/ic_priority_24dp"
                    android:text="@string/editor_btn_priority"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_priority"
...
                <Button
                    android:drawableLeft="@drawable/ic_notification_24dp"
                    android:id="@+id/editor_btn_picknotifydelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="0.54"
                    android:id="@+id/editor_btn_chooseaction" />

            </LinearLayout>
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editor_notecontainer">
            </LinearLayout>

...
                    android:layout_width="257dp"
                    android:layout_height="match_parent"
                    android:id="@+id/editor_tags" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_tags_delete"
                    android:layout_weight="1"
                    android:background="@drawable/ic_delete_black_24dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_tags_add"
                    android:background="@drawable/ic_add_circle_black_24dp"
                    android:layout_weight="1" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_addnote"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
...
