...


    <string name="menuEdit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="accept">Akzeptieren</string>
    <string name="ok">OK</string>

    <string name="layout_button_addAction">Aktion hinzufügen</string>
    <string name="execute_action">Aktion durchführen</string>

    <string name="createTestEvents">Erzeuge Testevents</string>

...
