...

        <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dialog_numberpicker_accept" />
    </LinearLayout>

</LinearLayout>
